--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
   "name": "is-array-buffer",
+  "version": "1.0.0",
   "description": "Check if the given value is an ArrayBuffer.",
-  "version": "0.1.0",
+  "main": "dist/is-array-buffer.common.js",
+  "module": "dist/is-array-buffer.esm.js",
+  "browser": "dist/is-array-buffer.js",
   "license": "MIT",
-  "repository": "fengyuanchen/is-array-buffer",
+  "homepage": "https://github.com/fengyuanchen/is-array-buffer",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fengyuanchen/is-array-buffer.git"
+  },
   "author": {
-    "name": "Fengyuan Chen",
-    "url": "chenfengyuan.com"
+    "name": "Chen Fengyuan",
+    "url": "http://chenfengyuan.com"
   },
   "keywords": [
-    "type",
-    "object",
-    "ArrayBuffer",
-    "isArrayBuffer",
-    "javascript"
+    "is",
+    "array",
+    "buffer",
+    "ArrayBuffer"
   ],
-  "files": [
-    "index.js"
-  ],
-  "engines": {
-    "node": ">=0.10.0"
-  },
   "scripts": {
+    "build": "rollup -c",
+    "compress": "uglifyjs dist/is-array-buffer.js -o dist/is-array-buffer.min.js -c -m --comments /^!/",
+    "lint": "eslint src",
+    "postbuild": "npm run test && npm run compress",
+    "prebuild": "npm run lint",
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^2.3.3"
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
+    "mocha": "^3.4.2",
+    "rollup": "^0.45.2",
+    "rollup-plugin-babel": "^2.7.1",
+    "uglify-js": "^3.0.26"
   }
 }
