--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "is-array-buffer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Check if the given value is an ArrayBuffer.",
   "main": "dist/is-array-buffer.common.js",
   "module": "dist/is-array-buffer.esm.js",
   "unpkg": "dist/is-array-buffer.js",
-  "license": "MIT",
+  "repository": "fengyuanchen/is-array-buffer",
   "homepage": "https://github.com/fengyuanchen/is-array-buffer",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fengyuanchen/is-array-buffer.git"
-  },
+  "license": "MIT",
   "author": {
     "name": "Chen Fengyuan",
     "url": "http://chenfengyuan.com"
@@ -28,18 +25,22 @@
   "scripts": {
     "build": "rollup -c",
     "compress": "uglifyjs dist/is-array-buffer.js -o dist/is-array-buffer.min.js -c -m --comments /^!/",
-    "lint": "eslint src",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "lint": "eslint src *.js --fix",
     "release": "npm run lint && npm run build && npm run compress && npm run test",
-    "test": "mocha"
+    "test": "nyc mocha"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0",
-    "mocha": "^3.4.2",
-    "rollup": "^0.45.2",
-    "rollup-plugin-babel": "^2.7.1",
-    "uglify-js": "^3.0.26"
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "codecov": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "mocha": "^5.0.5",
+    "nyc": "^11.6.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-babel": "^3.0.3",
+    "uglify-js": "^3.3.17"
   }
 }
