--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@ljharb/eslint-config": "^21.0.1",
 		"aud": "^2.0.2",
 		"auto-changelog": "^2.4.0",
+		"available-typed-arrays": "^1.0.5",
 		"es-value-fixtures": "^1.4.2",
 		"eslint": "=8.8.0",
 		"for-each": "^0.3.3",
@@ -66,7 +67,8 @@
 	},
 	"dependencies": {
 		"call-bind": "^1.0.2",
-		"get-intrinsic": "^1.1.3"
+		"get-intrinsic": "^1.1.3",
+		"is-typed-array": "^1.1.10"
 	},
 	"publishConfig": {
 		"ignore": [
