--- a/package.json
+++ b/package.json
@@ -66,9 +66,8 @@
 		"startingVersion": "2.0.1"
 	},
 	"dependencies": {
-		"call-bind": "^1.0.5",
-		"get-intrinsic": "^1.2.2",
-		"is-typed-array": "^1.1.13"
+		"call-bind": "^1.0.2",
+		"get-intrinsic": "^1.2.1"
 	},
 	"publishConfig": {
 		"ignore": [
