--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"pretest": "npm run lint",
 		"tests-only": "nyc tape 'test/**/*.js'",
 		"test": "npm run tests-only --",
-		"posttest": "aud --production",
+		"posttest": "npx npm@'>= 10.2' audit --production",
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
 	},
@@ -52,7 +52,6 @@
 		"@types/get-intrinsic": "^1.2.2",
 		"@types/object-inspect": "^1.8.4",
 		"@types/tape": "^5.6.4",
-		"aud": "^2.0.4",
 		"auto-changelog": "^2.4.0",
 		"available-typed-arrays": "^1.0.7",
 		"es-value-fixtures": "^1.4.2",
