--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@types/tape": "^5.7.0",
 		"auto-changelog": "^2.5.0",
 		"available-typed-arrays": "^1.0.7",
+		"encoding": "^0.1.13",
 		"es-value-fixtures": "^1.5.0",
 		"eslint": "=8.8.0",
 		"for-each": "^0.3.3",
